2004-06-29  Brian K Nickel  <kerrick@cox.net>

	* libmuine/player-gst.c: (player_stop), (player_pause):

	Unlock audio device when paused.

2004-06-19  Fernando Herrera  <fherrera@onirica.com>
2004-06-20  Jorn Baayen  <jbaayen@gnome.org>

	* data/muine.applications:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Support for multiple files in the command line (play the first, enqueue
	the rest)

2004-06-20  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/Song.cs:

	Make FitsCriteria a method of Song and Album.

2004-06-18  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Bump version number to 0.6.3.99.

2004-06-18  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* README:
	* configure.in:
	* src/About.cs:
	* src/NotificationAreaIcon.cs:

	Mono Beta 3 support (Patch provided by jeroen, edd and latexer),
	and released 0.6.3.

2004-06-13  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:

	Small logic fix.

2004-06-13  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* data/muine.applications:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Support playing files that are not in the library.  Set Muine as 
	your default ogg/mp3 handler in nautilus and you're in heaven.

2004-06-13  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Some cleanups and beginnings of SM support.

2004-06-13  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:

	Sort by album name if the album has > 3 artists.

2004-06-06  Alexander Shopov <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2004-06-06  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added 'ja' (Japanese) into ALL_LINGUAS.

2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Bumped version number to 0.6.2.99.

2004-06-05  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	Released 0.6.2.
