@@ -1,3 +1,7 @@
+2004-06-30  Alastair Porter  <alastair@linuxexperience.com>
+
+	* muine.spec.in: Update.
+
 2004-06-29  Brian K Nickel  <kerrick@cox.net>
 
 	* libmuine/player-gst.c: (player_stop), (player_pause):
